--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,11 @@
         }
     },
     "require": {
-        "php": "^7.4|^8.0"
+        "php": "^8.0",
+        "laravel/framework": "^10.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0",
+        "orchestra/testbench": "^8.3",
         "phpunit/phpunit": "^9.0"
     },
     "extra": {
